fix(css): btn contact, z-index title, grid column

--- a/styles/fe-style-commons.scss
+++ b/styles/fe-style-commons.scss
@@ -39,6 +39,7 @@ body{
 }
 .title h1{ //nos photographes
     position: relative;
+    z-index: -1;
     font-size: 30px;
     font-weight: 400;
     color:$colorPrimaryStatic;
@@ -166,10 +167,12 @@ align-items: center;
 }
 
 //btn contactez moi
-.contact{
-    order:2;
+.contact, .toto{
+    grid-column: 2;
+    grid-row: 1;
+    display: flex;
+    justify-content: center;
     align-content: center;
-
 }
 //btn contact
 .btn-contact{
@@ -315,7 +318,8 @@ height: 2;
      }
 /*------order de la card ----*/    
 .photoIdDuPhotographeLarge{
-    order:3;
+    grid-column: 3;
+    grid-row: 1;
     text-align: right;
  }
 
@@ -323,7 +327,8 @@ height: 2;
 //btn
 
 .infoDuPhotographeLarge{
-    order:1;
+    grid-column: 1;
+    grid-row: 1;
     margin-left: 50px;
     
 }
@@ -333,7 +338,7 @@ height: 2;
      padding-top: 10%;
     padding-bottom: 15px;
     width: 150%;
-   padding-right: 250px;
+   //padding-right: 250px;
     }
 
 .localisationLarge{
